feat: Add build scripts and configuration for Linux installer
This commit introduces a structured process for creating a self-extracting installer for Linux, making the application easier to distribute and run.

- Creates a new 'packaging/linux' directory to store source files related to the Linux package build.
- Adds 'Modan2.desktop', a standard file that allows the application to integrate with Linux desktop environments (e.g., application menus).
- Includes the 'makeself.sh' and 'makeself-header.sh' scripts, which are used to generate a single-file '.sh' installer from the application bundle.
- Updates '.gitignore' to exclude temporary build directories ('build/', 'dist/', 'build_linux/') and 'pyinstaller' spec files, ensuring build artifacts are not committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@ Modan2.db
 build/
 dist/
 data/
-test*.py
+# test*.py  # Commented out to include test files in version control
 Output/
 *.spec
 translations/desktop.ini
+# Linux installer build files
+/build_linux/
+
+# PyInstaller artifacts
+/build/
+/dist/
+*.spec
