fix(ci): Replace Inno Setup action in Windows build workflow
The previously used action, 'minishlink/actions-innosetup', was failing due to a repository resolution error.

This commit replaces the failing action with a more stable and widely-used alternative, 'crazy-max/ghaction-innosetup'. This new action is more reliable and simplifies the workflow by combining the setup and compilation steps into a single, clean step.

This change resolves the build failure in the Windows installer workflow.

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,14 +35,11 @@ jobs:
         run: |
           python -m PyInstaller --onedir --noconsole --add-data "icons/*.png;icons" --add-data "translations/*.qm;translations" --add-data "migrations/*;migrations" --icon="icons/Modan2_2.png" Modan2.py
 
-      # 5. Inno Setup 설치 (Marketplace Action 사용)
-      - name: Set up Inno Setup
-        uses: Minishlink/actions-innosetup@v1.2.0
-
-      # 6. Inno Setup 컴파일러 실행
-      - name: Compile Inno Setup installer
-        run: |
-          iscc.exe "InnoSetup/Modan2.iss"
+      # 5. Inno Setup 설치 및 컴파일
+      - name: Build Inno Setup installer
+        uses: crazy-max/ghaction-innosetup@v3
+        with:
+          script: InnoSetup/Modan2.iss
 
       # 7. 최종 설치 파일을 artifact로 업로드 (와일드카드 사용)
       - name: Upload Windows Installer
