fix: Simplify macOS file pattern in GitHub Actions release
- Change macOS pattern from 'Modan2_v*_build*_macos' to 'Modan2_v*_macos'
- macOS build log shows file created as 'Modan2_v0.1.4_build28_macos'
- Simplify pattern to avoid potential glob matching issues

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -221,7 +221,7 @@ jobs:
         files: |
           release-files/modan2-windows/InnoSetup/Output/*_Installer.exe
           release-files/modan2-linux/dist/Modan2_v*_build*_linux
-          release-files/modan2-macos/dist/Modan2_v*_build*_macos
+          release-files/modan2-macos/dist/Modan2_v*_macos
         draft: false
         prerelease: true
       env:
