feat: Add comprehensive OpenGL stability improvements
- Added OpenGL info logging to track renderer/version/format
- Changed deployment OpenGL backend from desktop to ANGLE for better compatibility
- Added width/height guards in resizeGL to prevent division by zero
- Created OpenGL smoke test for CI/CD pipeline verification
- Added smoke test to all platform builds in GitHub Actions

These changes improve stability across different hardware and deployment scenarios

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,11 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
     
+    - name: Run OpenGL smoke test
+      run: |
+        python test_opengl_smoke.py
+      continue-on-error: true
+    
     - name: Build Windows executable
       run: |
         python build.py
@@ -85,6 +90,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
+    
+    - name: Run OpenGL smoke test
+      run: |
+        python test_opengl_smoke.py
+      continue-on-error: true
     
     - name: Build macOS application
       run: |
@@ -149,6 +159,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
+    
+    - name: Run OpenGL smoke test
+      run: |
+        python test_opengl_smoke.py
+      continue-on-error: true
     
     - name: Build Linux executable
       run: |
