feat(project): Enhance version management workflow
- Rename bump_version.py to manage_version.py.
- Introduce semver library for robust semantic versioning.
- Add support for pre-release cycles (alpha, beta, rc) with `pre*`, `stage`, and `release` commands.
- Update VERSION_MANAGEMENT.md with a comprehensive guide for the new script.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ scikit-learn
 statsmodels
 pyopengl
 pyopengl-accelerate
+semver>=3.0.0
 # sudo apt-get update && sudo apt-get install -y libxcb-xinerama0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1   libxcb-randr0 libxcb-render-util0 libxcb-xfixes0 libxcb-shape0 libxcb-cursor0 qt5-qmake qtbase5-dev libqt5gui5   libqt5core5a libqt5widgets5 python3-pyqt5
 # sudo apt-get install -y libglut-dev libglut3.12 python3-opengl
