--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   call-build-workflow:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     uses: ./.github/workflows/reusable_build.yml
     with:
       build_number: ${{ github.run_number }}
