feat(ci): Add build number to manual release title
- Release title now shows: Modan2 v0.1.4-beta.5 (Build 123)
- Git tag remains clean: v0.1.4-beta.5
- Build number visible in UI without cluttering git tags

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -42,7 +42,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event.inputs.version_tag }}
-          name: Modan2 ${{ github.event.inputs.version_tag }}
+          name: Modan2 ${{ github.event.inputs.version_tag }} (Build ${{ github.run_number }})
           body: |
             🚀 Modan2 ${{ github.event.inputs.version_tag }} Release
             
