--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.event.inputs.version_tag }}
+          tag_name: ${{ github.event.inputs.version_tag }}-build.${{ github.run_number }}
           name: Modan2 ${{ github.event.inputs.version_tag }} (Build ${{ github.run_number }})
           body: |
             🚀 Modan2 ${{ github.event.inputs.version_tag }} Release
